fixing the pictures block so it has a gap like the rest

--- a/css/main.css
+++ b/css/main.css
@@ -417,6 +417,6 @@ height: 300px;
 width:900px;
 margin-left:auto;
 margin-right:auto;
-margin-bottom:50px;
+margin-bottom:2em;
 }
 
